--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -67,7 +67,7 @@ body {
   line-height: 1.5;
   color: #495057;
   text-align: left;
-  background-color: 12dcd5;
+  background-color: #79A9F5;
 }
 
 [tabindex="-1"]:focus {
