--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -65,7 +65,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #49507;
+  color: #79A9F5;
   text-align: left;
   background-color: #79A9F5;
 }
