--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -65,9 +65,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #79A9F5;
+  color: #0c58d6;
   text-align: left;
-  background-color: #79A9F5;
+  background-color: #fff;
 }
 
 [tabindex="-1"]:focus {
