--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -67,7 +67,7 @@ body {
   line-height: 1.5;
   color: #0c58d6;
   text-align: left;
-  background-color: #fff;
+  background-color: #20c997;
 }
 
 [tabindex="-1"]:focus {
