--- a/assets/css/steller.css
+++ b/assets/css/steller.css
@@ -65,7 +65,7 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #0c5d6;
+  color: #0c599d6;
   text-align: left;
   background-color: #20c997;
 }
